<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.number_search.NumberSearchFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/number_search_title"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/light_gray"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:paddingBottom="8dp"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <EditText
            android:id="@+id/et_enter_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="none"
            android:hint="@string/number_search_enter_number_hint"
            android:textColorHint="@color/gray"
            android:textColor="@color/white"
            android:focusedByDefault="false"
            android:background="@drawable/shape_deep_blue_rounded_rectangle"
            android:inputType="number"
            android:layout_marginTop="12dp"
            android:paddingStart="6dp"
            android:paddingEnd="6dp"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_search_description"
            android:textSize="12sp"
            android:textColor="@color/gray"
            android:layout_marginTop="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="6dp">

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:checkedButton="@id/rb_trivia">

                <RadioButton
                    android:id="@+id/rb_trivia"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_search_trivia"
                    android:buttonTint="@color/deep_blue" />

                <RadioButton
                    android:id="@+id/rb_math"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/number_search_math"
                    android:buttonTint="@color/deep_blue" />

            </RadioGroup>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="center">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mb_search"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:textSize="12sp"
                    android:text="@string/number_search_search"
                    android:layout_marginEnd="3dp"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/mb_search_random_number"
                    android:layout_width="110dp"
                    android:layout_height="48dp"
                    android:textSize="12sp"
                    android:text="@string/number_search_search_random_number"
                    android:layout_marginStart="3dp"/>

            </LinearLayout>

        </LinearLayout>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number_search_search_history"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginTop="8dp" />
        
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_search_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/shape_dark_gray_rounded_rectangle"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:layout_marginTop="4dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>